# SkiaSharp.Static

./: .gitignore  README.md  args.gn  args.linux.gn
.github/actions/build-linux/: action.yml
.github/actions/setup-linux/: action.yml
.github/workflows/: build-linux_skia3.119.4.yml  build-win_skia3.119.4.yml  build.yml  build_skia3.119.4.yml
nuget/: SkiaSharp.Static.Linux.csproj
nuget/buildTransitive/: 2ndLAB.SkiaSharp.Static.Linux.targets
